--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -1,1 +1,11 @@
 @import "tailwindcss";
+
+@layer components {
+    #categories .selected {
+        @apply bg-black text-white;
+    }
+
+    #categories .not-selected {
+        @apply bg-white text-black;
+    }
+}
